--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.data.mongodb.database=appdb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+spring.jpa.properties.javax.persistence.validation.mode = none
 # App Properties
 app.jwtSecret= appSecretKey
 app.jwtExpirationMs= 86400000
